<resources>
    <string name="app_name">我的工具</string>
    <string name="back">返回</string>
    <string name="confirm">确定</string>
    <string name="submit">提交</string>
    <string name="sure">确认</string>
    <string name="setting">设置</string>
    <string name="submit_and_add">提交并新增</string>
    <string name="cancel">取消</string>
    <string name="bottle">瓶</string>
    <string name="apply_time">申请时间:</string>
    <string name="box">箱</string>
    <string name="success">成功</string>
    <string name="discount">折扣额:</string>
    <string name="fail">失败</string>
    <string name="date">日期:</string>
    <string name="exit">退出</string>
    <string name="end_time">结束时间:</string>
    <string name="end_date">结束日期:</string>
    <string name="start_site">始发地点:</string>
    <string name="end_site">目的地点:</string>
    <string name="pole">-</string>
    <string name="hint">友情提示</string>
    <string name="no">否</string>
    <string name="number">数量:</string>
    <string name="nothing">无</string>
    <string name="please_select">请选择</string>
    <string name="please_input">请输入</string>
    <string name="please_input_memomsg">请输入备注信息</string>
    <string name="login_please_input_account">请输入帐号</string>
    <string name="login_please_input_pwd">请输入密码</string>
    <string name="please_can_choose_input">可选输</string>
    <string name="piece">件</string>
    <string name="prompt">当前无任何记录</string>
    <string name="start_time">开始时间:</string>
    <string name="start_date">开始日期:</string>
    <string name="no_sim">请插入SIM卡</string>
    <string name="yes">是</string>
    <string name="logout">注销</string>
    <string name="version">版本</string>
    <string name="please_wait">请等待</string>
    <string name="submitting_request">正在提交请求&#8230;</string>
    <string name="querying">正在查询中&#8230;</string>
    <string name="owequerying">欠款单据正在查询中&#8230;</string>
    <string name="accomplishment">完成</string>
    <string name="submitting">正在提交数据&#8230;</string>
    <string name="loading">正在加载数据&#8230;</string>
    <string name="offline_submit_fail">当前为离线登录状态,无法提交</string>
    <string name="score">分</string>
    <string name="give_score">评分</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="choose_time">选择时间</string>
    <string name="choose_date">选择日期</string>
    <string name="please_choose_start_time">请选择开始时间</string>
    <string name="please_choose_end_time">请选择结束时间</string>
    <string name="please_input_report_content">请输入汇报内容</string>
    <string name="please_input_memo_content">请输入备忘内容</string>
    <string name="getmore">点击获取更多</string>
    <string name="lastpage">已至最后页</string>
    <string name="more">更多</string>
    <string name="more1">更多 >></string>
    <string name="delete">删除</string>
    <string name="add">添加</string>
    <string name="total">总计:</string>
    <string name="save">保存</string>
    <string name="is_save">是否保存?</string>
    <string name="name">姓名:</string>
    <string name="sex">性别:</string>
    <string name="type">类型:</string>
    <string name="job">职位:</string>
    <string name="linkmobiletel">联系电话:</string>
    <string name="linkmobile">联系电话1:</string>
    <string name="linktel">联系电话2:</string>
    <string name="save_add">保存并新增</string>
    <string name="high_level_search">高级检索</string>
    <string name="query">查询</string>
    <string name="high_level_search_result">高级检索结果</string>
    <string name="detail">详情</string>
    <string name="start">开始</string>
    <string name="submit_success">提交成功</string>
    <string name="atmost_6_digit">最多只能输入六位</string>
    <string name="please_input_num_first">请先输入数字</string>
    <string name="please_input_searchcondition">请输入查询条件</string>
    <string name="input_error">您的输入有误</string>
    <string name="atmost_10_digit">编辑框最多可输入十位</string>
    <string name="input_error_num_first">您的输入有误,请先输入数字</string>
    <string name="over_10_digit_cue">对不起,您计算的数字超过10位,无法进行计算</string>
    <string name="function_anable">对不起,此按键功能还未实现</string>
    <string name="take_photo">拍照</string>
    <string name="have_not_photo">未拍照</string>
    <string name="take_nophoto">您当前无需拍照!</string>
    <string name="starttime_cannot_latter_endtime">开始时间不能大于结束时间</string>
    <string name="curtime_cannot_latter_starttime">开始时间不能小于当前时间</string>
    <string name="curtime_cannot_latter_endtime">结束时间不能小于当前时间</string>
    <string name="screen_landscape">横屏</string>
    <string name="screen_portrait">竖屏</string>
    <string name="highlevel">高级</string>
    <string name="nearsearch">搜索周边</string>
    <string name="no_arrange">未安排</string>
    <string name="already_arrange">已安排</string>
    <string name="all_channels">所有渠道......</string>
    <string name="channels_tradesman">零售商(分销商)</string>
    <string name="please_select_channel">请选择渠道</string>
    <string name="scan_fail">扫描失败,请重试</string>
    <string name="add_new">新增</string>
    <string name="manage">管理</string>
    <string name="modify">修改</string>
    <string name="star">*</string>
    <string name="function_incomplete">该功能正在完善&#8230;</string>
    <string name="classify">分类:</string>
    <string name="payment_date">收款日期:</string>
    <string name="all">全部</string>
    <string name="time">时间: </string>
    <string name="user_no_rights">当前帐号未分配权限</string>
    <string name="my_page">我</string>
    <string name="contact_list">电话本</string>
    <string name="area">面积</string>
    <string name="metering">计量/亩</string>
    <string name="unit">单位</string>
    <string name="jump_visit">跳过拜访</string>
    <string name="start_visit">开始拜访</string>
    <string name="abnormal_visit">异常拜访</string>
    <string name="delayed_visit">延迟拜访</string>
    <string name="meeting">会议</string>
    <string name="train">培训</string>
    <string name="abnormal_reason">异常原因</string>
    <string name="result_success">应答成功</string>
    <string name="result_fail">请求失败,请稍候再试!</string>
    <string name="result_overtime">网络连接超时,请稍候再试!</string>
    <string name="result_exception">网络连接超时,请检查网络是否正常,稍候再试!</string>
    <string name="result_errunzip">解密解压缩失败!</string>
    <string name="result_errchksum">校验码错误</string>
    <string name="result_errseqid">流水号错误</string>
    <string name="result_errdatalen">数据长度错误</string>
    <string name="result_errdata">服务器数据异常</string>
    <string name="result_errserver">服务器内部错误(500)</string>
    <string name="result_errunknown">未知错误(-1)</string>
    <string name="result_errconnect">网络连接超时</string>
    <string name="result_errver">程序版本不匹配</string>
    <string name="result_errlogin">对不起,您的帐号在别的地方登录,您被迫退出!</string>
    <string name="result_errproto">协议处理缺失</string>
    <string name="result_errcache">服务器缓存异常</string>
    <string name="result_errregister">帐号未注册</string>
    <string name="result_updatenospace">存储空间不足,无法升级!</string>
    <string name="result_uploadfilenospace">存储空间不足,无法下载文件!</string>
    <string name="result_uploadfilenopath">下载路径为空,无法下载文件!</string>
    <string name="result_updatechksum">升级文件校验和错误,请重新下载!</string>
    <string name="result_updateapk">安装包格式错误</string>
    <string name="result_updateloadfail">程序下载错误,请重新下载!</string>
    <string name="result_updatewritefail">文件保存失败</string>
    <string name="startactivity_loading">软件加载中&#8230;</string>
    <string name="login_loginactivity_name">帐号:</string>
    <string name="login_loginactivity_login">登        录</string>
    <string name="login_loginactivity_password">密码:</string>
    <string name="login_loginactivity_remember_password">记住密码</string>
    <string name="login_loginactivity_input_name">帐号不能为空</string>
    <string name="login_loginactivity_input_password">密码不能为空</string>
    <string name="login_loginactivity_input_namepassword">请输入帐号和密码</string>
    <string name="login_loginactivity_islogining">正在登录&#8230;</string>
    <string name="login_loginactivity_password_error">帐号或密码错误!</string>
    <string name="login_loginactivity_query_change_username">切换帐号将导致后台未上传的数据丢失,是否确定登录？</string>
    <string name="login_loginactivity_isconnecting">正在连接中心&#8230;</string>
    <string name="login_loginactivity_isexiting">正在退出保存数据中&#8230;</string>
    <string name="login_loginactivity_query_opennet">当前无网络,是否立即打开网络？</string>
    <string name="login_loginactivity_please_opennet">请开启网络</string>
    <string name="login_loginactivity_setnet">设置网络</string>
    <string name="login_loginactivity_query_offline">当前无网络,是否使用上次登录的帐号进入离线模式？</string>
    <string name="login_mainactivity_query_offline">更新基础信息网络异常,是否使用上次登录的帐号进入离线模式？</string>
    <string name="login_loginactivity_offline">离线模式</string>
    <string name="updateactivity_title">下载</string>
    <string name="updateactivity_ver">当前有可升级的程序,版本号为</string>
    <string name="updateactivity_update">",是否立即升级?"</string>
    <string name="updateactivity_mustupdate">",请进行升级!"</string>
    <string name="updateactivity_finished">"已完成"</string>
    <string name="updateactivity_k1">"k/"</string>
    <string name="updateactivity_zero">"0"</string>
    <string name="updateactivity_k">"k"</string>
    <string name="updateactivity_hundred">"100"</string>
    <string name="mainactivity_baseinfo">基础信息</string>
    <string name="mainactivity_baseinfo_loading">基础信息下载中</string>
    <string name="mainactivity_baseinfo_parsering">基础信息解析中&#8230;</string>
    <string name="mainactivity_startquerybaseinfo">开始下载基础信息</string>
    <string name="mainactivity_download_baseinfo_suc">基础信息下载成功</string>
    <string name="mainactivity_download_baseinfo_fail">基础信息下载失败</string>
    <string name="mainactivity_query_requery_baseinfo">之前基础信息下载失败,该功能无法使用,是否要重新下载</string>
    <string name="mainactivity_downloading_baseinfo">基础信息正在下载,请稍后使用该功能</string>
    <string name="mainactivity_query_quit_hasdata_unupload">还有数据未上传完毕,是否确定要退出？</string>
    <string name="mainactivity_query_quit">确定退出掌务通？</string>
    <string name="mainactivity_unable_visit">对不起,没有找到拜访模板</string>
    <string name="mainactivity_unable_formscheme">对不起,没有找到该表单模板</string>
    <string name="mainactivity_waiting_please_signin">"\n请先进行打卡\n"</string>
    <string name="take_photo_again">重拍</string>
    <string name="declare_declare_time">申报时间:</string>
    <string name="declare_approve_state">审批状态:</string>
    <string name="declare_approve_state_isnot_verified">未审核</string>
    <string name="declare_approve_state_verified">已审核</string>
    <string name="declare_approve_state_reject">已驳回</string>
    <string name="declare_want_delete_record">确定要删除该条记录吗？</string>
    <string name="declare_please_input_start_time_interval">请输入开始时间</string>
    <string name="declare_please_input_start_date_interval">请输入开始日期</string>
    <string name="declare_please_input_start_date_interval1">开始日期不能小于当前日期</string>
    <string name="declare_please_input_end_date_interval">请输入结束日期</string>
    <string name="declare_please_input_time_err_interval">开始时间不能大于结束时间</string>
    <string name="declare_please_input_date_err_interval">开始日期不能大于结束日期</string>
    <string name="declare_please_input_time_interval">请输入起止时间</string>
    <string name="declare_please_modify_date_interval">起止日期有误,请重新输入</string>
    <string name="declare_please_modify_time_interval">起止时间有误,请重新输入</string>
    <string name="declare_alreadyregister_had_approved">已审核,不允许删除</string>
    <string name="declareleave_leave_declare">请假申报</string>
    <string name="declareleave_leavedeclaregroup_register_leave">登记请假</string>
    <string name="declareleave_leavedeclaregroup_already_register_leave">已登记请假</string>
    <string name="declareleave_alreadyregisterleaveactivity_type">假别:</string>
    <string name="declareleave_leaveactivity_please_input_reason">请输入请假原因</string>
    <string name="declareleave_leaveactivity_leave_type">请假类型:</string>
    <string name="declareleave_leaveactivity_leave_time_overlap">与之前的请假申请时间有重叠</string>
    <string name="declareleave_alreadydeclareleaveactivity_leave_query_fail">已登记请假申请查询失败</string>
    <string name="arrow">arrow</string>
</resources>