<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bar_background_gray"
    android:orientation="vertical" >

    <com.samuel.common.CommonTitleView
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.samuel.common.CommonTitleView>

    <TextView
        android:id="@+id/text_check_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/margin_content"
        android:layout_marginStart="@dimen/margin_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text=""
        android:textIsSelectable="true"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_small" >

        <Button
            android:id="@+id/button_takephoto"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size_height"
            android:layout_weight="1"
            android:background="@drawable/selector_orange_corner_btn"
            android:text="@string/take_photo"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_content" />

        <Button
            android:id="@+id/button_check"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size_height"
            android:layout_marginLeft="@dimen/margin_content"
            android:layout_marginStart="@dimen/margin_content"
            android:layout_weight="1"
            android:background="@drawable/selector_green_corner_btn"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_titlebtn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/image_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/add"
            android:padding="@dimen/margin_medium"
            android:src="@drawable/imageview_no_pic" />
    </LinearLayout>

</LinearLayout>